src/features/link/snapshots/texlab__features__link__tests__imports.snap
---
source: src/features/link/tests.rs
assertion_line: 69
expression: links
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 14
      },
      "end": {
        "line": 0,
        "character": 17
      }
    },
    "target": "[tmp]/bar/baz.tex"
  }
]
