src/features/link/snapshots/texlab__features__link__tests__includes.snap
---
source: src/features/link/tests.rs
assertion_line: 39
expression: links
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 7
      },
      "end": {
        "line": 0,
        "character": 14
      }
    },
    "target": "[tmp]/bar.tex"
  }
]
